--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -45,7 +45,7 @@
               <div class="done-item">
                 <li>{{ item.name }}</li>
                 <span><button class="status-change-button left" onClick="updateStatus('{{ item.id }}', '{{ list_names.in_progress }}')"><</button></span>
-                <span><button class="status-change-button right" onClick="deleteCard('{{ item.id }}')">✓</button></span>
+                <span><button class="status-change-button right tick" onClick="deleteCard('{{ item.id }}')">✓</button></span>
               </div>
           {% endfor %}
         </ul>
@@ -59,13 +59,13 @@
     padding-top: 20px;
   }
   .jumbotron {
-    background-color: #343a40;
     color: #fff;
     text-align: center;
     padding: 2rem 1rem;
     margin-bottom: 20px;
     background-color: darkgreen;
     border-style: dotted;
+    border-radius: 2em;
   }
   .row {
     margin: 0 auto;
@@ -80,6 +80,8 @@
     width: 100%;
     list-style-position: inside;
     list-style-type: none;
+    align-items: center;
+    display: flex;
   }
   .to-do-item, .in-progress-item, .done-item {
     display: flex;
@@ -117,6 +119,8 @@
     color: white;
     border-style: outset;
     font-size: large; 
+    width: 2em;
+    height: 2em;
   }
   .status-change-button.right {
     background-color: green;
@@ -125,6 +129,10 @@
   .status-change-button.left {
     background-color: red;
     border-color: red;
+  }
+  .status-change-button.tick {
+    display: flex;
+    align-items: center;
   }
   .list-todo .to-do-item {
     border-color: red;
@@ -137,6 +145,15 @@
   .list-done .done-item {
     border-color: green;
     background-color: #d9edd5;
+  }
+
+  @media screen and (max-width: 767px) {
+      .status-change-button.right {
+        writing-mode: tb;
+    }
+    .status-change-button.left {
+      writing-mode: tb;
+    }
   }
 </style>
 
