--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div class="jumbotron">
-    <h1 class="display-4">Clare's new and improved todo list</h1>
+    <h1 class="display-4">Clare's newer and improveder todo list</h1>
   </div>
 
   <div class="col-md-12">
