--- a/ansible/.env.j2
+++ b/ansible/.env.j2
@@ -8,9 +8,4 @@ FLASK_DEBUG=true
 # Required to use Flask's session feature (for storing todos in a browser cookie in the first exercise): https://flask.palletsprojects.com/en/2.3.x/config/#SECRET_KEY
 SECRET_KEY={{secret_key}}
 
-TRELLO_API_KEY={{trello_api_key}}
-TRELLO_TOKEN={{trello_token}}
-TRELLO_BOARD_ID={{trello_board_id}}
-TO_DO_LIST_NAME=To Do
-DONE_LIST_NAME=Done
-IN_PROGRESS_LIST_NAME=In Progress
+MONGODB_PRIMARY_CONNECTION={{mongodb_primary_connection}}
